--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
 </head>
 
 <body>
+  .<style>
+
+  </style>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
